tests/security/IndirectGetAssignment/output.txt
ERROR: TaintedData - input.hack:59:6 - Detected tainted HTML tags